# finance_demov2

./: README.md  dash_app.py  pyproject.toml
components/: charts.py  news.py  portfolio.py
services/: ai_service.py  custom_investment_agent.py  custom_investment_agent2.py  news_service.py  stock_service.py  tracking_service.py
utils/: data_utils.py
